src/screens/Payment/Payment.module.scss
@import '../../theme';

.metadata {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  margin-top: spacing(3);
}

.priceWidget {
  margin-top: 0;
  margin-bottom: 0;
}

.date {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0;
  color: $primaryTextColor;
  min-width: 140px;
  font-size: 14px;
  cursor: pointer;
  color: $titleTextColor;
}

.arrowRightIcon {
  path {
    fill: $titleTextColor;
  }
}

